Fix Entry Page header on Safari

--- a/src/components/Header/EntryPage.scss
+++ b/src/components/Header/EntryPage.scss
@@ -1,19 +1,19 @@
 .entry-page-header {
   z-index: -1;
+}
 
-  #welcome-1 {
-    font-family: 'Amatic SC', cursive;
-    font-size: 11.2rem;
-    font-weight: 700;
-    letter-spacing: 0.6rem;
-  }
+#welcome-1 {
+  font-family: 'Amatic SC', cursive;
+  font-size: 11.2rem;
+  font-weight: 700;
+  letter-spacing: 0.6rem;
+}
 
-  #welcome-2 {
-    font-family: 'Amatic SC', cursive;
-    font-size: 8.4rem;
-    font-weight: 400;
-    letter-spacing: 0.1rem;
-  }
+#welcome-2 {
+  font-family: 'Amatic SC', cursive;
+  font-size: 8.4rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
 }
 
 .welcome {
@@ -27,7 +27,6 @@
   font-weight: 400;
   padding-top: 6rem;
   text-shadow: 0.5rem 0.5rem 6.4rem #000;
-  z-index: 1;
 }
 
 .snd {
@@ -211,14 +210,12 @@
 }
 
 @media screen and (max-width: 3840px) {
-  .entry-page-header {
-    #welcome-1 {
-      font-size: 13rem;
-    }
+  #welcome-1 {
+    font-size: 13rem;
+  }
 
-    #welcome-2 {
-      font-size: 10.5rem;
-    }
+  #welcome-2 {
+    font-size: 10.5rem;
   }
 
   .welcome {
@@ -249,14 +246,12 @@
 }
 
 @media screen and (max-width: 1600px) {
-  .entry-page-header {
-    #welcome-1 {
-      font-size: 11.2rem;
-    }
+  #welcome-1 {
+    font-size: 11.2rem;
+  }
 
-    #welcome-2 {
-      font-size: 8.4rem;
-    }
+  #welcome-2 {
+    font-size: 8.4rem;
   }
 
   .welcome {
@@ -295,6 +290,10 @@
     display: none;
   }
 
+  #home.nav-opened .welcome {
+    display: none;
+  }
+
   #main-bg {
     display: none;
   }
@@ -305,15 +304,13 @@
 }
 
 @media screen and (max-width: 767px) {
-  .entry-page-header {
-    #welcome-1 {
-      font-size: 7.2rem;
-      letter-spacing: 0.4rem;
-    }
+  #welcome-1 {
+    font-size: 7.2rem;
+    letter-spacing: 0.4rem;
+  }
 
-    #welcome-2 {
-      font-size: 6rem;
-    }
+  #welcome-2 {
+    font-size: 6rem;
   }
 
   .welcome {
@@ -329,14 +326,12 @@
 }
 
 @media screen and (max-width: 500px) {
-  .entry-page-header {
-    #welcome-1 {
-      font-size: 4.8rem;
-    }
+  #welcome-1 {
+    font-size: 4.8rem;
+  }
 
-    #welcome-2 {
-      font-size: 4rem;
-    }
+  #welcome-2 {
+    font-size: 4rem;
   }
 
   .welcome {
@@ -352,14 +347,12 @@
 }
 
 @media screen and (max-width: 350px) {
-  .entry-page-header {
-    #welcome-1 {
-      font-size: 3.6rem;
-    }
+  #welcome-1 {
+    font-size: 3.6rem;
+  }
 
-    #welcome-2 {
-      font-size: 2.8rem;
-    }
+  #welcome-2 {
+    font-size: 2.8rem;
   }
 }
 
